--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@discord-additions/embed-builder",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Some helpful additions to make creating embeds easier.",
   "main": "build/index.js",
   "scripts": {
@@ -11,8 +11,7 @@
     "url": "git+https://github.com/DiscordAdditions/EmbedBuilder.git"
   },
   "keywords": [
-    "eris",
-    "discord.js",
+    "oceanic.js",
     "embeds",
     "additions",
     "discord",
@@ -24,12 +23,11 @@
     "url": "https://github.com/DiscordAdditions/Components/issues"
   },
   "homepage": "https://github.com/DiscordAdditions/Components#readme",
-  "dependencies": {},
   "devDependencies": {
     "@types/node": "^17.0.34",
     "@uwu-codes/eslint-config": "^1.0.43",
     "@uwu-codes/tsconfig": "^1.0.1",
-    "discord-api-types": "^0.33.0"
+    "oceanic.js": "^1.0.2"
   },
   "publishConfig": {
     "access": "public"
